# fastapi-postgres-sample

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
app/: config.py  main.py  prestart.sh
app/api/: __init__.py  deps.py  endpoints.py  idtoken.py  routes.py
app/api/endpoint/: company.py  product.py
app/api/schemas/: __init__.py  company.py  product.py
app/db/: __init__.py  alembic_ext.py  backend_wait.py  base_class.py  base_crud.py  model.py  session.py
app/db/alembic/versions/: 8ae56159948d_.py
app/db/crud/: __init__.py  crud_company.py  crud_product.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2022_12_21_0240-4224450f13be_.py
app/tests/: conftest.py
app/tests/endpoint/: test_company.py  test_product.py
app/utils/: cognito.py  test_utils.py
postgres/: init.sql  local.env
