[tool.poetry]
name = "fastapi-postgres-sample"
version = "0.1.0"
description = ""
authors = ["tantaka <tomokazu.tantaka@glpgs.com>"]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^1.4.45"
alembic = "^1.9.0"
tenacity = "^8.1.0"
psycopg2 = "^2.9.5"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
fastapi = "^0.88.0"
PyJWT = "^2.6.0"
boto3 = "^1.26.32"
requests = "^2.28.1"
httpx = "^0.23.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[tool.poetry.dev-dependencies]
sqlacodegen = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
